# lemon

./: .gitignore  INSTALL.md  MANIFEST.in  README.md  pyproject.toml  setup.py
example/: README.md
example/autoencoder/: simple.py
example/cifar100/: main.py
example/linear_regression/: main.py
example/mnist/: simple.py
example/resnet/: resnet_cifar10.py
example/rnn/: sequential_mnist.py
example/save_load/: basic.py
example/scheduler/: cosine_annealing.py  reduce_on_plateau.py  step_scheduler.py
example/vgg/: vgg_cifar10.py
example/xor/: csv_dataset.py  manual_training.py  supervised_dataset.py  xor_data.csv
src/lemon/: __init__.py  checkpoint.py  numlib.py  onnx_io.py  plotlib.py  trainer.py
tests/: test_2.py  test_autograd_comprehensive.py  test_broadcast_.py  test_checkpointlib.py  test_diff.py  test_grad.py  test_numlib.py  test_onnxlib.py  test_plotlib.py  test_tensor.py  test_tensor2.py  test_tensorType.py  test_tensor_operations.py  test_trainer.py  test_trainer_checkpoint.py  test_type.py  test_util.py
tests/datalib/: test_MNIST.py  test_dataset_utils.py  test_datasets.py  test_transforms.py
tests/nnlib/: test_BatchNorm1d.py  test_DataLoader.py  test_Dropout.py  test_Linner.py  test_Module.py  test_Optimizer.py  test_Parameter.py  test_Sequential.py  test_TrainControl.py  test_activations.py  test_conv2d.py  test_init.py  test_loss_funcs.py  test_models.py  test_module_state_dict.py  test_new_loss_funcs.py  test_rnn_layers.py  test_scheduler.py  test_silu_glu_rmsnorm.py  test_transformer_layers.py
tests/numlib/: test_Autograd.py  test_Boolean.py  test_CUDA.py  test_CastError.py  test_Complex.py  test_Integer.py  test_Matrix.py  (+22 more)
(+129 files in other folders)
