[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lemon"
version = "0.0.1"
description = "PyTorch-like numerical computation/tensor/autograd library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "remokasu"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
gpu = ["cupy>=9.0.0"]
plot = ["matplotlib>=3.0.0", "scikit-learn>=0.24.0"]
onnx = ["onnx>=1.10.0", "onnxruntime>=1.10.0"]
all = [
    "cupy>=9.0.0",
    "matplotlib>=3.0.0",
    "scikit-learn>=0.24.0",
    "onnx>=1.10.0",
    "onnxruntime>=1.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/remokasu/numlib"
Repository = "https://github.com/remokasu/numlib"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
